....starting to fix pageflip things

--- a/_includes/head/head.html
+++ b/_includes/head/head.html
@@ -23,7 +23,9 @@
 {% if site.data.theme.map-cluster == true %}<link rel="stylesheet" href="{{ '/assets/lib/leaflet/MarkerCluster.css' | relative_url }}">
 <link rel="stylesheet" href="{{ '/assets/lib/leaflet/MarkerCluster.Default.css' | relative_url }}">{% endif %}{%- endif -%}
 <link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}" type="text/css">
-<script src="../assets/js/page-flip.browser.js" type="module"></script>
+<!-- <script src="../assets/js/page-flip.browser.js" type="module"></script>
+ -->
+<script src="https://cdn.jsdelivr.net/npm/page-flip@2.0.7/dist/js/page-flip.browser.min.js" type="module"></script>
 
 {% comment %} 
     Meta tags and analytics are added during production build ONLY 
