--- a/_layouts/item/record.html
+++ b/_layouts/item/record.html
@@ -122,11 +122,12 @@ item-meta: true
         {% include item/browse-buttons.html %}
     {%- endif -%}
 </div>
+<script src="https://cdn.jsdelivr.net/npm/page-flip@2.0.7/dist/js/page-flip.browser.min.js"></script>
 <script defer>
 
-// import { PageFlip } from 'page-flip';
+// import { PageFlip } from "../page-flip";
 
-    let pageFlip = new PageFlip(document.getElementById('book'),
+    let pageFlip = new St.PageFlip(document.getElementById('book'),
                 {
  
                     drawShadow: false,
@@ -138,6 +139,7 @@ item-meta: true
                     mobileScrollSupport: false 
                 }
             );
+    console.log("loaded!@");
     pageFlip.loadFromHTML(document.querySelectorAll(".page"));
 
 
